Exemplo da explicação dos links internos e externos

--- a/1. Fundamentos/Secao-02/Dia-1.1-HTML&CSS-Estruturas-de-paginas/Exercicio2.html
+++ b/1. Fundamentos/Secao-02/Dia-1.1-HTML&CSS-Estruturas-de-paginas/Exercicio2.html
@@ -19,18 +19,18 @@
 
 <ol>
     
-    <li>CSS</li>
+    <li><a href="#CSS">CSS</a></li>
     <li>Posicionamento em CSS</li>
     <li>HTML Semântico</li>
     <li>JavaScript</li>
     <li>Dom</li>
-    <li>Flexbox</li>
+    <li><a href="#Flexbox">Flexbox</a></li>
 
 </ol>
 
    <a href="https://pbs.twimg.com/media/DkflzCFW0AAXk3R.jpg" target="_blank">Só para descontrair</a> 
 
-   <p>Conteúdo sobre CSS Conteúdo sobre CSS Conteúdo sobre CSS Conteúdo sobre CSSConteúdo sobre CSSConteúdo sobre CSSConteúdo sobre CSSConteúdo sobre CSSConteúdo sobre CSSConteúdo sobre CSSConteúdo sobre CSSConteúdo sobre CSSConteúdo sobre CSSConteúdo sobre CSSConteúdo sobre CSS Conteúdo sobre CSS Conteúdo sobre CSSConteúdo sobre CSS Conteúdo sobre CSS Conteúdo sobre CSS Conteúdo sobre CSSConteúdo sobre CSS Conteúdo sobre CSS</p>
+   <p id="CSS">Conteúdo sobre CSS Conteúdo sobre CSS Conteúdo sobre CSS Conteúdo sobre CSSConteúdo sobre CSSConteúdo sobre CSSConteúdo sobre CSSConteúdo sobre CSSConteúdo sobre CSSConteúdo sobre CSSConteúdo sobre CSSConteúdo sobre CSSConteúdo sobre CSSConteúdo sobre CSSConteúdo sobre CSS Conteúdo sobre CSS Conteúdo sobre CSSConteúdo sobre CSS Conteúdo sobre CSS Conteúdo sobre CSS Conteúdo sobre CSSConteúdo sobre CSS Conteúdo sobre CSS</p>
    
    <p>Posicionamento em CSS Posicionamento em CSS Posicionamento em CSS Posicionamento em CSS Posicionamento em CSS Posicionamento em CSS Posicionamento em CSS Posicionamento em CSS Posicionamento em CSS Posicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSSPosicionamento em CSS</p>
    
@@ -40,7 +40,7 @@
    
    <p>Conteúdo sobre Dom Conteúdo sobre Dom  Conteúdo sobre Dom  Conteúdo sobre Dom  Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom  Conteúdo sobre Dom  Conteúdo sobre Dom Conteúdo sobre Dom  Conteúdo sobre Dom  Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom Conteúdo sobre Dom </p>
    
-   <p>Conteúdo sobre Flexbox Conteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre Flexbox</p>
+   <p id="Flexbox">Conteúdo sobre Flexbox Conteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre FlexboxConteúdo sobre Flexbox</p>
 
 
 </body>
