--- a/1. Fundamentos/1-periodo/Secao-02/Dia-1.2-HTML&CSS-Primeiros-passos-CSS/Exercicios-dia-1.2.html
+++ b/1. Fundamentos/1-periodo/Secao-02/Dia-1.2-HTML&CSS-Primeiros-passos-CSS/Exercicios-dia-1.2.html
@@ -13,13 +13,22 @@
             color: orange;
         }
 
+        ul {
+            background-color: red;
+        }
+
+        .paragrafo {
+            background-color: green;
+        }
+
+
 
     </style>
 </head>
 <body>
     <h1>Frutas</h1>
-    <p>Qual é a sua fruta favorita?</p>
-    <ul>
+    <p class="paragrafo">Qual é a sua fruta favorita?</p>
+    <ul class="paragrafo">
         <li>Maçã</li>
         <li>Banana</li>
         <li>Goiaba</li>
